updated to fit SEO and readability

--- a/index.html
+++ b/index.html
@@ -35,24 +35,27 @@
     </style>
   </head>
   <body>
-    <div class="card">
-      <div class="card-head">
-        <img src="images/image-qr-code.png" alt="qr-code image" class="img" />
-      </div>
-      <div class="card-body">
-        <h2>Improve your front-end skills by building projects</h2>
-        <p>
-          Scan the QR code to visit Frontend Mentor and take your coding skills
-          to the next level
-        </p>
-      </div>
-    </div>
 
-    <div class="attribution">
+    <main role="main">
+      <div class="card">
+        <div class="card-head">
+          <img src="images/image-qr-code.png" alt="qr-code image" class="img" />
+        </div>
+        <div class="card-body">
+          <h1>Improve your front-end skills by building projects</h1>
+          <p>
+            Scan the QR code to visit Frontend Mentor and take your coding skills
+            to the next level
+          </p>
+        </div>
+      </div>
+    </main>
+
+    <footer role="attribution" class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Victor Marvj</a>.
-    </div>
+    </fo>
   </body>
 </html>
