--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
     </style>
   </head>
   <body>
-
     <main role="main">
       <div class="card">
         <div class="card-head">
@@ -44,8 +43,8 @@
         <div class="card-body">
           <h1>Improve your front-end skills by building projects</h1>
           <p>
-            Scan the QR code to visit Frontend Mentor and take your coding skills
-            to the next level
+            Scan the QR code to visit Frontend Mentor and take your coding
+            skills to the next level
           </p>
         </div>
       </div>
@@ -56,6 +55,6 @@
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Victor Marvj</a>.
-    </fo>
+    </footer>
   </body>
 </html>
