--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
       </div>
     </main>
 
-    <footer role="attribution" class="attribution">
+    <!-- <footer role="attribution" class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Victor Marvj</a>.
-    </footer>
+    </footer> -->
   </body>
 </html>
